Update post text

--- a/content/notes/nlp-2022.mdx
+++ b/content/notes/nlp-2022.mdx
@@ -7,19 +7,19 @@ imageLink: /
 title: "Developments in my personal neuro-linguistic-program during 2022"
 ---
 
-This post developed out of something first noted on **DC5B Described > [Weekly update 2022-09-07](https://dc5b.dog/2022/09/07/weekly-update/)**. [DC5B](https://dc5b.com/) is my personally business for turning my creative ideas into money. It's a project in its first year that I will grow alongside my work as a software consultant (business developer).
+This post developed out of something first noted on **DC5B Described > [Weekly update 2022-09-07](https://dc5b.dog/2022/09/07/weekly-update/)**. [DC5B](https://dc5b.com/) is my personal business for turning creative ideas into money. It's a project in its first year that I will grow alongside my work as a software consultant (business developer).
 
-Between April and October I was getting coaching from a master of NLP (neuro-linguistic-programming) which focused on this hypothetical business exploration. Since the first few weeks it has been apparent that we would be working on a project that underlies the development of **DC5B**. How I plan, operate and improve in order to start a business is clearly a question whose answer dictates the rest of my life. Let's have a example to illustrate that point:
+Between April and October I was getting coaching from a master of NLP (neuro-linguistic-programming) which focused on this hypothetical business exploration. Since the first few weeks it has been apparent that we would be working on a project that underlies the development of **DC5B** – how I plan, operate and improve in order to start a business. Clearly the answer to that question dictates the rest of one life. It doesn't just have the potential to change my life, it will be my life, whatever happens. Ok a bit to deep too fast? Let's have an example:
 
-The process for building motivation around the business involves identifying what I want and how I'm going to get it. Getting skilled at asking and answering those kinds of questions for myself might help me set up my own side-hustle, and it also enhances my ability to develop other peoples' businesses and plan and deliver their projects.
+The process for building motivation around the business involves identifying what I want and how I'm going to get it. Getting skilled at asking and answering those kinds of questions is going to change what I can achieve for myself. I've set up a side-hustle and have a clear project plan for month ahead. It has also enhanced my ability to develop other peoples' businesses. My most recent engagement at work was without a doubt my most successful. The operation was efficient and effective and while I could see how the training I was doing in the background related to the speed at which we overcame obstacles and delivered on our objectives, keeping on track day-by-day, week-by-week and month-by-month. Everyone else could see the outcomes and appreciate the way of operating.
 
-The breakthroughs that I have experienced in terms of clarity of thought, frank communication, extreme ownership of my feelings, actions and thoughts and refactoring of my own neurological processes have been beneficial to many professional and personal aspects of my life.
+The breakthroughs that I have experienced in terms of clarity of thought, frank communication, extreme ownership of my feelings, actions and thoughts, and my ability to refactor my own neurological processes have been beneficial to many, professional and personal, aspects of my life.
 
-At the time that of [that weekly update](https://dc5b.dog/2022/09/07/weekly-update/) I was working on my operational guidelines. Guidelines for answers common working dilemmas.
+At the time that of [that weekly update](https://dc5b.dog/2022/09/07/weekly-update/) I was working on what I termed my "operational guidelines". Guidelines for answers common working dilemmas. That feeling has remained as I've been putting the guidelines to the test. Rehearsing ways to organise, focus and make decisions at speed.
 
-That feeling has remained as I've been putting the guidelines to the test. Rehearsing ways to organise, focus and make decisions at speed.
+My primary focus at the time was some database work. I remained single threaded and goal minded. When it wasn't possible to work on it directly, e.g. during journey time without a networked computer, I transitioned to planning and design the next steps, or picking off small waiting tasks to I could retain plenty of time to focus on the primary task as soon as conditions allowed it.
 
-My primary focus has been some database and like button work. I've remained single threaded and goal minded. When it's not been possible to work on it fully, e.g. journey time without a networked laptop, I've transitioned to planning, design or small waiting tasks and been able to switch back easily once the conditions allow it.
+I'll come back to that idea of primary and alternative focus after the image below.
 
 ## T.O.T.E. Model
 
