--- a/content/notes/nlp-2022.mdx
+++ b/content/notes/nlp-2022.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2022-09-07
 description: Reflecting on the work I've been doing with a NLP master and coach, I note some break-through decisions regarding how I organise my work.
-image: ./nlp-2022.jpg
+image: ./nlp-2022_focus.jpg
 imageAlt: Close up of ink on paper diagram and notes showing a crop of something on the theme of task size
 imageLink: /
 title: "Developments in my personal neuro-linguistic-program during 2022"
@@ -38,8 +38,6 @@ The TOTE model gives us a process by which we work to satisfy a test. Once the d
 1. We can go into detail to achieve a specific desire, whilst keeping in memory the sequential steps that led from and lead us back to the more fundamental desire.
 
 ## Changing between primary focus, planning and reflection
-
-![The Primary Focus in the context of alternatives](./nlp-2022_focus.jpg)
 
 In the above image I'm designing places for things outside of the primary focus. Recognising that the primary focus will get interrupted at times (e.g. when the database work needs me to be at a laptop and online), I'm offering options for what to bring into view when I put that to one side (e.g. while I'm on a screen break but otherwise ready to work).
 
