Correct LL782 poster paths

--- a/content/notes/ll782-poster.mdx
+++ b/content/notes/ll782-poster.mdx
@@ -2,9 +2,9 @@
 date: 2022-11-30
 description: Lab notes on a little bit of play with 3D CSS
 title: "Lab notes on using CSS and HTML to build a brand poster"
-image: ./a-frame-001.png
+image: ./ll782-poster.png
 imageAlt: "A screenshot of a primitive three dimensional scene lit with pink and green lights"
-imageAnchor: "/labs/a-frame-001/"
+imageAnchor: "/labs/LL782-poster/"
 ---
 
 ## Lab work
