Clarify Lab notes for users

--- a/content/notes/ll782-poster.mdx
+++ b/content/notes/ll782-poster.mdx
@@ -15,7 +15,9 @@ imageAnchor: "/labs/LL782-poster/"
 
 ### For users:
 
-1. If you have a mouse, move it around to tilt the image
+1. Click on the image or the link above
+1. If you have a mouse, move it around the screen
+1. Enjoy watching the image tilt and stretch
 
 ### For developers:
 
