Shorten note title

--- a/content/notes/ll782-poster.mdx
+++ b/content/notes/ll782-poster.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2022-11-30
 description: Lab notes on a little bit of play with 3D CSS
-title: "Lab notes on using CSS and HTML to build a brand poster"
+title: "Lab notes on using CSS and HTML to build a poster"
 image: ./ll782-poster.png
 imageAlt: "A screenshot of a primitive three dimensional scene lit with pink and green lights"
 imageAnchor: "/labs/LL782-poster/"
