--- a/content/notes/chat-open-ai.mdx
+++ b/content/notes/chat-open-ai.mdx
@@ -1,7 +1,7 @@
 ---
 date: 2022-12-15
 description: A copy and paste of the advice I got from ChatGPT when I asked about promoting a small ecommerce
-title: "I asked the new language model from OpenAI how can you cheaply and efficiently promote a small ecommerce website selling bespoke artwork?"
+title: "I asked the new language model from OpenAI how can you cheaply and efficiently promote a small ecommerce website selling bespoke artwork"
 ---
 
 This is what it had to say:
