Correct links in nlp-2022.mdx

--- a/content/notes/nlp-2022.mdx
+++ b/content/notes/nlp-2022.mdx
@@ -3,11 +3,11 @@ date: 2022-09-07
 description: Reflecting on the work I've been doing with a NLP master and coach, I note some break-through decisions regarding how I organise my work.
 image: ./nlp-2022_focus.jpg
 imageAlt: Close up of ink on paper diagram and notes showing a crop of something on the theme of task size
-imageLink: /
+imageLink: https://instagram.com/dog.5b
 title: "Developments in my personal neuro-linguistic-program during 2022"
 ---
 
-This post developed out of something first noted on **DC5B Described > [Weekly update 2022-09-07](https://dc5b.dog/2022/09/07/weekly-update/)**. [DC5B](https://dc5b.com/) is my personal business for turning creative ideas into money. It's a project in its first year that I will grow alongside my work as a software consultant (business developer).
+This post developed out of something first noted on **DC5B Described > [Weekly update 2022-09-07](https://dc5b.wordpress.com/2022/09/07/weekly-update/)**. [DC5B](https://dc5b.com/) is my personal business for turning creative ideas into money. It's a project in its first year that I will grow alongside my work as a software consultant (business developer).
 
 Between April and October I was getting coaching from a master of NLP (neuro-linguistic-programming) which focused on this hypothetical business exploration. Since the first few weeks it has been apparent that we would be working on a project that underlies the development of **DC5B** – how I plan, operate and improve in order to start a business. Clearly the answer to that question dictates the rest of one life. It doesn't just have the potential to change my life, it will be my life, whatever happens. Ok a bit to deep too fast? Let's have an example:
 
