Fix another link to the blog

--- a/content/notes/nlp-2022.mdx
+++ b/content/notes/nlp-2022.mdx
@@ -15,7 +15,7 @@ The process for building motivation around the business involves identifying wha
 
 The breakthroughs that I have experienced in terms of clarity of thought, frank communication, extreme ownership of my feelings, actions and thoughts, and my ability to refactor my own neurological processes have been beneficial to many, professional and personal, aspects of my life.
 
-At the time that of [that weekly update](https://dc5b.dog/2022/09/07/weekly-update/) I was working on what I termed my "operational guidelines". Guidelines for answers common working dilemmas. That feeling has remained as I've been putting the guidelines to the test. Rehearsing ways to organise, focus and make decisions at speed.
+At the time that of [that weekly update](https://dc5b.wordpress.com/2022/09/07/weekly-update/) I was working on what I termed my "operational guidelines". Guidelines for answers common working dilemmas. That feeling has remained as I've been putting the guidelines to the test. Rehearsing ways to organise, focus and make decisions at speed.
 
 My primary focus at the time was some database work. I remained single threaded and goal minded. When it wasn't possible to work on it directly, e.g. during journey time without a networked computer, I transitioned to planning and design the next steps, or picking off small waiting tasks to I could retain plenty of time to focus on the primary task as soon as conditions allowed it.
 
